<resources>
    <string name="app_name">My_OnlineStore</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="catalog">Catalog</string>
    <string name="personalArea">Personal Area</string>
    <string name="cart">Cart</string>
    <string name="products">Products</string>
    <string name="buy">Buy</string>
    <string name="like">Favorite</string>
    <string name="categories">Categories</string>
    <string name="add_category">Add category</string>
    <string name="category_name">Category name</string>
    <string name="favorite_products">Favorite products</string>
    <string name="delete_category">Delete category</string>
</resources>