<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item android:id="@+id/categoriesFragment"
        android:menuCategory="secondary"
        android:icon="@drawable/ic_catalog"
        android:title="@string/catalog" />
    <item android:id="@+id/productFavoriteFragment"
        android:menuCategory="secondary"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />
    <item android:id="@+id/personalAreaFragment"
        android:menuCategory="secondary"
        android:icon="@drawable/ic_personal_area"
        android:title="@string/personalArea" />
    <item android:id="@+id/cartFragment"
        android:menuCategory="secondary"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart" />
</menu>