<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/main_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.my_onlinestore.views.HomeFragment"
        android:label="@string/home" />
    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.example.my_onlinestore.views.CategoryFragment"
        android:label="@string/catalog" />
    <fragment
        android:id="@+id/productFavoriteFragment"
        android:name="com.example.my_onlinestore.views.ProductFavoriteFragment"
        android:label="@string/favorite" />
    <fragment
        android:id="@+id/personalAreaFragment"
        android:name="com.example.my_onlinestore.views.PersonalAreaFragment"
        android:label="@string/personalArea" />
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.my_onlinestore.views.CartFragment"
        android:label="@string/cart" />
</navigation>